--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>SEO Tools Dashboard - Tokopedia/Shopee Automation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    
+    <!-- ⭐ TAMBAH INI 2 BARIS -->
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.0/dist/axios.min.js"></script>
+    <script src="api-proxy.js"></script>
+    <!-- ⭐ END -->
+        
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SEO Tools Dashboard - Tokopedia/Shopee Automation</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Background Particles -->
@@ -333,4 +344,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
